# chessbot

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
assets/: tgui_theme_black.txt
benchmarks/: CMakeLists.txt  bm_board.cpp  bm_perft.cpp  bm_pruning.cpp
cmake/: clean_coverage.sh.in  coverage.sh.in  coverage_filter.py  coverage_report.sh.in
data/: openings_random_elo2000.epd
docs/: implementation-report.md  project-spefication.md  testing-report.md  user-manual.md
docs/weekly-reports/: week-1.md  week-2.md  week-3.md  week-4.md  week-5.md  week-6.md
include/ai/: ai_minimax.hpp  ai_random.hpp  pst.hpp  registry.hpp  search_position.hpp  transposition_table.hpp
include/core/: ai_player.hpp  bitboard.hpp  board.hpp  chess.hpp  game.hpp  move_generation.hpp  piece.hpp  position.hpp  registry.hpp  standards.hpp  types.hpp  uci_player.hpp
include/engine/: history_tables.hpp  killer_history.hpp  minimax_engine.hpp  move_picker.hpp  pawn_hash_table.hpp  search_position.hpp  see.hpp  transposition_table.hpp  value_tables.hpp
include/gui/: assets.hpp  chess.hpp  chess_gui.hpp  game_manager.hpp  player_configuration.hpp
include/gui/elements/: board_view.hpp  chess_view.hpp  config_widgets.hpp  player_config_view.hpp  side_panel_view.hpp  style.hpp
include/interface/: sfml_gui.hpp
include/tools/: assets.hpp
src/: main.cpp
src/ai/: ai_minimax.cpp  ai_random.cpp  registry.cpp  search_position.cpp  transposition_table.cpp
src/cli/: minimax_cli.cpp
src/core/: ai_player.cpp  bitboard.cpp  board.cpp  chess.cpp  game.cpp  move_generation.cpp  piece.cpp  position.cpp  registry.cpp  types.cpp  uci_player.cpp
src/engine/: minimax_engine.cpp  move_picker.cpp  pawn_hash_table.cpp  registry.cpp  search_position.cpp  transposition_table.cpp  uci_engine.cpp
src/gui/: assets.cpp  chess.cpp  chess_gui.cpp  game_manager.cpp  gui_main.cpp
src/gui/elements/: board_view.cpp  chess_view.cpp  config_widgets.cpp  player_config_view.cpp  side_panel_view.cpp
src/interface/: sfml_gui.cpp
tests/: CMakeLists.txt  positions.hpp  test_bitboard.cpp  test_board.cpp  test_mate_finding.cpp  test_move_generation.cpp  test_position.cpp  test_search_position.cpp  test_see.cpp  test_zobrist.cpp
tools/: pgn_filter_elo.py  pgn_to_edp_picker.py
