function(add_benchmark_executable name)
    cmake_parse_arguments(ARG "" "" "SRCS" ${ARGN})
    add_executable(${name} ${ARG_SRCS})
    target_compile_options(${name} PRIVATE ${ENG_FLAGS})
    target_compile_definitions(${name} PRIVATE ${ENG_DEFINES})
    target_link_libraries(${name} PRIVATE chess_core benchmark::benchmark_main)
    if(NOT MSVC)
        target_link_libraries(${name} PRIVATE -pthread)
    endif()
endfunction()

add_benchmark_executable(perft SRCS bm_perft.cpp)
add_benchmark_executable(pruning SRCS bm_pruning.cpp)
